@@ -2,6 +2,8 @@ Changes in lmfit-5.2 [master]
 
 - bug fix:
   - correct man page (5.0 API change)
+- acceleration(?):
+  - revert to just one malloc for all workspaces, now based on a char array
 
 Changes in lmfit-5.1, released 29aug13
 
